# Data-Leak-Scanner

./: .gitignore  CHANGELOG.md  Data Leak Scanner.py  Dockerfile  Makefile  README.md  SECURITY.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
deployment/prometheus/: prometheus.yml
docs/: ARCHITECTURE.md  THREAT_MODEL.md
examples/: sample_http_response.txt
src/data_leak_scanner/: __init__.py  burp_extension.py  cli.py  detector.py  http.py  models.py  server.py
tests/: test_detector.py
tests/integration/: test_server.py
