[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "data-leak-scanner"
version = "0.2.0"
description = "Deterministic leak detection engine for HTTP payload security scanning"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "WaiperOK" }]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.3.5",
  "ruff>=0.9.7"
]

[project.scripts]
data-leak-scanner = "data_leak_scanner.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "S"]
ignore = ["S101"]
